--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div align="center" id="insertPost">
         <img src="profile.gif"/>
         <input type="text" placeholder="Whats on your mind ?"/>
-        <button type="button" onclick="loadData()">Load data</button>
+        <button type="button" onclick="loadData()">Get data</button>
     </div>
     
 	<div align="center" id="printText"></div>
